--- a/bayesBinom.ipynb
+++ b/bayesBinom.ipynb
@@ -5,9 +5,9 @@
    "metadata": {},
    "source": [
     "## Reasoning \n",
-    "Bayesian or probabilistic approach to statistical questiosn are becomenig more and more popular not only in academia and science field but also in business. Even though Bayes theorem itself is not that difficult to wrap your head around, when it comes to, let's say, linear regression estimation, the calculations imidiately become much more complicated, involving such things like Markov Chain Monte-Carlo, which, frankly, I feel like I don't fully understand myself. So people descide to skip it.\n",
+    "Bayesian or probabilistic approach to statistical questions are becoming more and more popular not only in academia and science field but also in business. Even though Bayes theorem itself is not that difficult to wrap your head around, when it comes to, let's say, linear regression parameters, the calculations imidiately become much more complicated, involving such things like Markov chain Monte-Carlo, which, frankly, I feel like I don't fully understand myself. So, people decide to skip it.\n",
     "\n",
-    "In this and probably the following articles I'd like to give a couple of simple examples of how data analysts and data scientists can apply Bayes in fairly common situations, when it brings relieble and resonable outomes and no super duper efforts required."
+    "In this and probably the following articles I'd like to give a couple of simple examples of how data analysts and data scientists can apply Bayes in fairly common situations, when it brings relieble and resonable outcomes and no super efforts required."
    ]
   },
   {
@@ -16,11 +16,11 @@
    "source": [
     "## The task\n",
     "\n",
-    "Good chunk of my expirience is connected to game design. And let's say your game designer/producer comes up whith an idea of new feature/game mechanics. And she believes all your players will get it and love it. During the play test with a group of 27 players only 9 people said they fully understood the idea and the mechenics. Quite a big difference with what was expected, right? How to find a concensus? Can we make conclusions based only on 26 reviews? There is no time to think and do more tests - we need to plan events and relieses!\n",
+    "Good chunk of my experience is connected with game design. And let's say your game designer/producer comes up with an idea of new feature/game mechanics. And she believes all your players will get it and love it. During the play test with a group of 27 players only 9 people said they fully understood the idea and the mechanics. Quite a big difference with what was expected, right? How to find a concensus? Can we make conclusions based only on 26 reviews? There is no time to think and do more tests - we need to plan a release!\n",
     "\n",
-    "Great! This is the perfect time to shake a dust out of your Bayes knowledge.\n",
+    "Excellent! This is the perfect time to shake the dust off your lectures with Bayesian stuff.\n",
     "\n",
-    "Mathematically speaking we have a _binominal process_ and need to estimate parameter $\\theta$ - share of success, the rate of playesr who will understand and play the new mechanics.\n",
+    "Mathematically speaking we have a _binomial process_ and need to estimate parameter $\\theta$ - share of success, the rate of players who will understand and play the new mechanics.\n",
     "\n",
     "Let's load libraries and set the key variables"
    ]
@@ -90,14 +90,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see that $\\theta$ more than 70% looks absolutely unresonable. But the rate of 50% has some potential to be true. Probability to obtain 9 succeses out of 27 trials is just 3.5% in this case. But who knows, maybe in production with our army of real users we will get more luck indeed. "
+    "We can see that $\\theta$ more than 70% looks absolutely unreasonable. But the rate of 50% has some potential to be true. Probability to obtain 9 successes out of 27 trials is just 3.5% in this case. But who knows, maybe in production, with an army of our real users we will get more luck. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.034919567406177285"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "stats.binom.pmf(success, N, 0.5)"
    ]
@@ -106,16 +117,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "But in order to plan the event with this feature we need to get some boundaries for the $\\theta$. The game designer agrees thet her initial feelings were too optimistic. But with the real crowd, when people start to play and talk about the new mechanics, she expects not less that 70% of envolvment. Nice - we will reflect this in our prior. \n",
+    "But in order to plan the event with this feature we need to get some boundaries for the $\\theta$. The game designer agrees that her initial feelings were too optimistic. But with the real crowd, when people start to play and talk about the new mechanics, she expects not less than 70% of involvement. Nice - we will reflect this in our prior. \n",
     "\n",
     "## The prior\n",
     "\n",
-    "Let's set up the space for possible $\\theta$ estimation and than use _beta distribution_ to express 'not less than 70% envolvment' mathematically."
+    "Let's set up the space for possible $\\theta$ estimation and than use _beta distribution_ to express 'not less than 70% involvement' mathematically."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -144,14 +155,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I will not focus on bata distribution itself too much. But I will only mention that $\\alpha$ and $\\beta$ shape the curve. And if we increase it proportionally, for instance put $\\alpha$ = 6 and $\\beta$ = 3, we will get 'fattyer bell', less cenrtain prior idea of the parameter in question. In many publications, like in this [book](https://subscription.packtpub.com/book/data/9781789341652), it is recommended to use _weakly-informative priors_ and I tottaly like the idea. \n",
+    "I will not focus on beta distribution itself too much. But I will only mention that $\\alpha$ and $\\beta$ shape the curve. And if we increase them proportionally, for instance put $\\alpha$ = 6 and $\\beta$ = 3, we will get 'fattyer bell', less certain prior idea of the parameter in question. In many publications, like in this [book](https://subscription.packtpub.com/book/data/9781789341652), it is recommended to use _weakly-informative priors_ and I totally like the idea. \n",
     "\n",
-    "Luckyly with binominal and beta distributions bayesian calculations are pretty simple - I promised! Based on the formula $P(\\theta|y)$ ~ $Beta(\\alpha_{prior}+y, \\beta_{prior}+N-y)$ we can easily obtain the new $\\alpha$ and $\\beta$ for the postetior estimation of our true $\\theta$"
+    "Luckily with binomial and beta distributions bayesian calculations are pretty simple - I promised! Based on the formula $P(\\theta|y)$ ~ $Beta(\\alpha_{prior}+y, \\beta_{prior}+N-y)$ we can easily obtain the new $\\alpha$ and $\\beta$ for the postetior estimation of our true $\\theta$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -180,14 +191,25 @@
    "source": [
     "## Reasonable estimation\n",
     "\n",
-    "That's it! Based on our experiment and prior belives of what the rate should be, we got this distribution. Let's drow some key values. Like mean for the distributon."
+    "That's it! Based on our experiment and prior beliefs of what the rate should be, we got this distribution. Let's draw some key values. Like mean for the distribution."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4523809523809524"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "stats.beta.mean(alpha_post, beta_post)"
    ]
@@ -196,12 +218,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And now 90% of probability density interval."
+    "And 90% of probability density interval."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -247,11 +269,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What I would say, it is unreasonable to expect envolvment in the mechanics more than 60%. At the same time we are sure at least 33% of players will get it and play it. Having this fork in hands we can build our plans.\n",
+    "What I would say, it is unreasonable to expect involvement in the mechanics more than 60%. At the same time we are sure at least 33% of players will get it and play it. Having this fork in our hands we can build plans.\n",
     "\n",
-    "The true beuty is that having a new data we can update the estimation. Let's say we got 10 more reviews. We simply can add the results to our $\\alpha$ and $\\beta$ and get more precise understanding of the $\\theta$.\n",
+    "The true beauty is that having a new data we can update the estimation. Let's say we got 10 more reviews. We simply can add the results to our $\\alpha$ and $\\beta$ and get more precise understanding of the $\\theta$.\n",
     "\n",
-    "I hope you wil fined this interesting and usefull no matter what domain are you are working on. More examples such scenarios when you can easily use Bayes approache will follow.\n",
+    "I hope you will find this interesting and useful no matter what domain are you are working on. More examples of such scenarios when you can easily use Bayes approach will follow.\n",
     "\n",
     "Stay tuned!"
    ]
