--- a/bayesBinom.ipynb
+++ b/bayesBinom.ipynb
@@ -191,7 +191,7 @@
    "source": [
     "## Reasonable estimation\n",
     "\n",
-    "That's it! Based on our experiment and prior beliefs of what the rate should be, we got this distribution. Let's draw some key values. Like mean for the distribution."
+    "That's it! Based on our experiment and prior beliefs of what the rate should be, we got this distribution. Let's draw some key values. Theoretical mean of beta distribution is $\\mu=\\alpha/(\\alpha +\\beta)$"
    ]
   },
   {
@@ -211,14 +211,14 @@
     }
    ],
    "source": [
-    "stats.beta.mean(alpha_post, beta_post)"
+    "alpha_post/(alpha_post+beta_post)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And 90% of probability density interval."
+    "And 90% _credible interval_. Note that this is different from confidence interval."
    ]
   },
   {
