--- a/bayesBinom.ipynb
+++ b/bayesBinom.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## Reasoning \n",
-    "Bayesian or probabilistic approach to statistical questions are becoming more and more popular not only in academia and science field but also in business. Even though Bayes theorem itself is not that difficult to wrap your head around, when it comes to, let's say, linear regression parameters, the calculations imidiately become much more complicated, involving such things like Markov chain Monte-Carlo, which, frankly, I feel like I don't fully understand myself. So, people decide to skip it.\n",
+    "Bayesian or probabilistic approach to statistical questions are becoming more and more popular not only in academia and science field but also in business. Even though Bayes theorem itself is not that difficult to wrap your head around, when it comes to, let's say, linear regression parameters, the calculations imidiately become much more cumbersome. So, people decide to skip it.\n",
     "\n",
     "In this and probably the following articles I'd like to give a couple of simple examples of how data analysts and data scientists can apply Bayes in fairly common situations, when it brings relieble and resonable outcomes and no super efforts required."
    ]
@@ -218,7 +218,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And 90% _credible interval_. Note that this is different from confidence interval."
+    "And 90% _Highest Density Interval_. Remember that this is different from confidence interval and 90% is arbitrary number."
    ]
   },
   {
@@ -273,7 +273,7 @@
     "\n",
     "The true beauty is that having a new data we can update the estimation. Let's say we got 10 more reviews. We simply can add the results to our $\\alpha$ and $\\beta$ and get more precise understanding of the $\\theta$.\n",
     "\n",
-    "I hope you will find this interesting and useful no matter what domain are you are working on. More examples of such scenarios when you can easily use Bayes approach will follow.\n",
+    "I hope you will find this interesting and useful no matter what domain are you are working on. More examples and scenarios when you can easily use Bayesian approach will follow.\n",
     "\n",
     "Stay tuned!"
    ]
